test/bad/classes/struct09.px

class A def
    x: Int

A(y = 0)
